# customer_interview_analysis_app

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/: 20250916_01_init.py
backend/app/: main.py
backend/app/api/v1/: health.py  interviews.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: interview.py
backend/app/schemas/: insight.py  interview.py
backend/app/services/: analysis.py  gemini.py  insight_parser.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: InterviewForm.tsx
frontend/src/pages/: App.tsx
frontend/src/services/: api.ts
