[project]
name = "customer-interview-analysis-backend"
version = "0.1.0"
description = "FastAPI backend for Customer Interview Analysis"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.114.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "SQLAlchemy==2.0.32",
  "psycopg[binary]==3.2.1",
  "alembic==1.13.2",
  "python-dotenv==1.0.1",
  "httpx==0.27.0",
  "google-generativeai==0.7.2",
  "loguru==0.7.2",
  "langchain==0.2.16",
  "langchain-community==0.2.11",
  "langchain-google-genai==1.0.7",
  "pypdf==4.3.1",
  "python-multipart==0.0.9",
  "alembic==1.13.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 